## -*- mode: Makefile-Automake -*-
##
## Copyright (c) 2012 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

dist_noinst_SCRIPTS = \
	del_lines \
	godelta8 \
	make_cde_package.sh \
	prep \
	shorten \
	test1_crash.sh \
	test1_wrong_code_framac.sh \
	test1_wrong_code_kcc.sh

###############################################################################

## End of file.
