## -*- mode: Makefile.am -*-
##
## Copyright (c) 2012 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

dist_noinst_SCRIPTS = \
	test1_crash.sh \
	test1_null.sh \
	test1_wrong_code.sh

###############################################################################

## End of file.
