## -*- mode: Makefile-Automake -*-
##
## Copyright (c) 2015, 2016 The University of Utah
## All rights reserved.
##
## This file is distributed under the University of Illinois Open Source
## License.  See the file COPYING for details.

###############################################################################

libexec_PROGRAMS = unifdef

unifdef_CPPFLAGS =

unifdef_SOURCES = \
	unifdef.c \
	unifdef.h \
	version.h

EXTRA_DIST = \
	CMakeLists.txt

###############################################################################

## End of file.
